web/src/css/index.css
@import "./box.css";
@import "./nav.css";
@import "./grid.css";
@import "./rte.css";
@import "./accordion.css";
@import "./checkout.css";
@import "./rd.css";
@import "./mapmodule.css";
@import "./flexgallery.css";
@import "./pane.css";
@tailwind base;
@tailwind components;
@tailwind utilities;

::selection {
  color: white;
  background: black;
}

html {
  font-family: Arial, Helvetica, sans-serif, "arial-unicode";
}
h6 {
  opacity: 0.5;
}

figure {
  position: relative;
}

figure img {
  object-fit: contain !important;
  transition: unset !important; /* Remove image fade-in animation */
}

.popupgrid {
  margin-bottom: 0.4em;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: transparent!important;
  text-rendering: optimizeLegibility!important;
  margin: 0;
  font-feature-settings: "kern" 1, "dlig" 1;
  -webkit-font-feature-settings: "kern" 1, "dlig" 1;
  -moz-font-feature-settings: "kern" 1, "dlig" 1;
}

button {
  text-rendering: optimizeLegibility;
  -webkit-tap-highlight-color: transparent!important;
}

.property-type-button {
  grid-template-columns: 70% auto;
}

/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar,
.overflow-x-scroll::-webkit-scrollbar,
div::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
body,
.overflow-x-scroll {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

html,
body,
body > div:first-child,
body > div > div {
  height: 100%;
  color: #000000;
}

table,
td,
th {
  border-collapse: collapse;
  padding: 0;
  margin: 0;
}

small {
  font-size: 100% !important;
}

.header-nav-text {
  font-size: max(32px, 4.5vw);
  line-height: max(40px, 4.6vw);
  text-decoration: underline;
  text-underline-offset: max(9px, 1.2vw);
  text-decoration-thickness: max(2.5px, 0.45vw);
}

/*loading animation*/
.load-animation {
  animation: loading;
  animation-duration: 2s;
  animation-fill-mode: forwards;
  animation-delay: 0.5s;
  transform-origin: top center;
}
.load-animate-out-bg {
  animation-duration: 1s !important;
  animation-timing-function: linear !important;
  animation-delay: 5s !important;
  animation-iteration-count: 1 !important;
  animation-direction: normal !important;
  animation-fill-mode: forwards !important;
  animation-play-state: running !important;
  animation-name: out !important;
}
.load-animate-out-logo {
  animation-duration: 5s !important;
  animation-timing-function: linear !important;
  animation-delay: 0s !important;
  animation-iteration-count: 1 !important;
  animation-direction: normal !important;
  animation-fill-mode: forwards !important;
  animation-play-state: running !important;
  animation-name: out !important;
}

@keyframes loading {
  from {
    opacity: 1;
    transform: scale(1);
  }
  to {
    opacity: 0;
    transform: scale(1);
  }
}
/* end loading animation */

.hide-intercom .intercom-lightweight-app,
.hide-intercom .intercom-app {
  display: none;
}

.instagram-logo {
  width: 20px;
  top: 0px;
  right: -3px;
}

.text-desktopCaptionSpecial * {
  font-size: 1rem;
  line-height: 1.2;
}
.rte .md\:text-desktopCaption * {
  font-size: inherit;
  line-height: inherit;
}

@keyframes scaleDown {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.animate-scale-down {
  animation: 1s scaleDown 1s forwards;
}

.animate-scale-down svg {
  margin-left: 1px;
}

.fade-enter {
  opacity: 0;
}

.fade-enter-active {
  opacity: 1;
  transition: opacity 250ms;
}

.fade-exit {
  opacity: 1;
}

.fade-exit-active {
  opacity: 0;
  transition: opacity 250ms;
}

.about-page {
  font-family: Arial, Helvetica, sans-serif;
  font-size: max(20px, 4vw) !important;
  line-height: max(24px, 5vw) !important;
  padding: 0 1.75rem;
  letter-spacing: -0.01em;
  -webkit-text-stroke: 0.2px;

  @media (max-width: 768px) {
    padding: 0 1.25rem;
  }
}
.about-page a {
  color: black;
  text-decoration: underline;
  text-underline-offset: max(4.2px, 0.9vw);
  text-decoration-thickness: max(2.5px, 0.5vw);
  border: none !important;
}
a:hover {
  color: black !important;
}

.inventory-slider .slick-list {
  height: 100%;
}

.no-shadow {
  box-shadow: none !important; /* weird bug with popover modules */
}

.circle-width {
  width: 37vw;
}
.circle-width h2,
.rte.rte-large .circle-width h2 {
  max-width: 190px;
  /*  font-size:3vw;*/
}
@media (min-width: 768px) {
  .circle-width {
    width: 17vw;
  }
  .circle-width h2,
  .rte.rte-large .circle-width h2 {
  }
}
@media (min-width: 1024px) {
  .circle-width {
    width: 13vw;
  }
  .circle-width h2,
  .rte.rte-large .circle-width h2 {
  }
}

/*NEWSLETTER POPUP*/
.calendly-contact {
  margin-top: -0.75em;
}
@keyframes slideInFromBottom {
  0% {
    transform: translateY(100%);
    visibility: visible;
  }
  100% {
    transform: translateY(0);
    visibility: visible;
  }
}

@keyframes appearFromZero {
  0% {
    opacity: 0;
    visibility: hidden;
  }
  100% {
    opacity: 1;
    visibility: visible;
  }
}
.newsletter-popup-inner {
  z-index: 9999;
}
.newsletter-popup {
  opacity: 0;
  top: calc(50% - 10rem);
  left: calc(50% - 14rem);
  visibility: hidden;
  animation: 1s ease-out 15s 1 appearFromZero;
  z-index: 9999999999;
  animation-fill-mode: forwards;
  box-shadow: 0px 1px 11px rgb(0 0 0 / 60%);
}
.newsletter-popup-overlay {
  display: block;
  content: " ";
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.5);
  z-index: 100;
  visibility: hidden;
  opacity: 0;
  animation: 1s ease-out 15s 1 forwards appearFromZero;
}
.newsletter-close {
  outline: none;
  width: 32px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  position: absolute;
  top: 8px;
  right: 12px;
}
.newsletter-popup button[type="submit"] {
  line-height: 0.2em !important;
}
.newsletter-close svg {
  width: 12px;
  height: 12px;
  color: currentColor;
  display: inline-block;
  vertical-align: middle;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.image-slider .slick-track {
  display: flex !important;
}

.image-slider .slick-slide {
  height: inherit !important;
}

.image-slider .slick-slide > div {
  height: 100%;
}

/*END NEWSLETTER POPUP*/

@media (max-width: 767px) {
  .newsletter-popup {
    opacity: 1;
    visibility: hidden;
    left: 0;
    top: auto;
    bottom: 0;
    animation: 1s ease-out 15s 1 forwards slideInFromBottom;
  }
  .mobile-logo-margin {
    margin-left: 62px;
  }
  .newsletter-popup-overlay {
    display: none;
  }
  /* input:not(.e-checkout), textarea, select,form button, button[type="submit"]{
    height:3em;
  } */
  #page-content-wrapper .earth-svg {
    /* top: -1px;
    position: relative; */
  }
}
@media only screen and (max-width: 767px) {
  .gallery-image {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
  }
}

@media (min-width: 768px) {
  .circle-width {
    width: 17vw;
  }
  .circle-width h2,
  .rte.rte-large .circle-width h2 {
    /*font-size:1.9vw;*/
  }
}
@media (min-width: 1024px) {
  .circle-width {
    width: 12vw;
  }
  .circle-width h2,
  .rte.rte-large .circle-width h2 {
    /*    font-size:1.1vw;*/
  }
}

.intercom-lightweight-app-launcher {
  right: 0.625rem !important;
}

@media (min-width: 768px) {
  .intercom-lightweight-app-launcher {
    right: 2.5rem !important;
  }
}

.property-type-description li {
  padding-left: 20px !important;
}

.best-in-class{
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  height: 0;
  width: 0;
  z-index: -1;
}

